# circular-harmonics

./: CMakeLists.txt  LICENSE  README.md
doc/: README.md  algorithm.md
doc/en/: README.md  algorithm.md
example/: circharm_advanced_collision_example.cpp  circharm_advanced_example.cpp  circharm_example.cpp  circharm_norm_example.cpp  circharm_train_example.cpp
include/: advanced_ch.hpp  circharm.hpp
src/: advanced_ch.cpp  circharm.cpp
test/: circharm_test.cpp
